# rcc4

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
crates/rcc/: Cargo.toml
crates/rcc/examples/: binary_add.rs
crates/rcc/src/: lib.rs  main.rs
crates/rcc_codegen/: Cargo.toml
crates/rcc_codegen/src/: error.rs  lib.rs
crates/rcc_parser/: Cargo.toml
crates/rcc_parser/src/: error.rs  expression.rs  function.rs  lib.rs  program.rs  statement.rs  testutil.rs  util.rs
crates/rcc_syntax/: Cargo.toml
crates/rcc_syntax/src/: tokens.rs
src/: lib.rs  main.rs  tokenize.rs
src/compile/: error.rs  mod.rs
src/emit/: error.rs  mod.rs
src/parse/: error.rs  expression.rs  function.rs  mod.rs  node.rs  program.rs  statement.rs  testutil.rs
src/tokenize/: consume_number.rs  mod.rs  token.rs  tokens.rs
